Fixed alignment on issuable new form
Fixes #13802

--- a/app/assets/stylesheets/pages/issuable.scss
+++ b/app/assets/stylesheets/pages/issuable.scss
@@ -316,3 +316,9 @@
     color: #8c8c8c;
   }
 }
+
+.issuable-form-padding-top {
+  @media (min-width: $screen-sm-min) {
+    padding-top: 7px;
+  }
+}
